--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/62bdd3af51.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <title>Focus Forest</title>
 </head>
@@ -19,7 +20,10 @@
         </div>
         <div id="forest">
             <div class="forest-grid">
-                <div class="forest-cube" id="cube-1"></div>
+                <div class="forest-cube" id="cube-1">
+                    <!-- <i class="fa-solid fa-tree"></i> -->
+                    <!-- <i class="fa-solid fa-tree-deciduous"></i> -->
+                </div>
                 <div class="forest-cube" id="cube-2"></div>
                 <div class="forest-cube" id="cube-3"></div>
                 <div class="forest-cube" id="cube-4"></div>
