:lipstick: add color and layout for phone screen

--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
 </head>
 <body>
     <div id="root">
-        <div id="controls">
+        <div id="timer-controls">
             <div id="timer">
-                <span id="hour">00</span>:<span id="minute">00</span>:<span id="second">00</span>:<span id="millisecond">00</span>
+                <span id="hour">00</span>:<span id="minute">00</span>:<span id="second">00</span><!--:<span id="millisecond">00</span>-->
             </div>
-            <button id="start">Start</button>
-            <button id="pause">Pause</button>
-            <button id="reset">Reset</button>
+            <div id="controls">
+                <button id="start">Start</button>
+                <button id="pause">Pause</button>
+                <button id="reset">Reset</button>
+            </div>
         </div>
         <div id="forest">
             <div class="forest-grid">
@@ -32,6 +34,13 @@
                 <div class="forest-cube" id="cube-7"></div>
                 <div class="forest-cube" id="cube-8"></div>
                 <div class="forest-cube" id="cube-9"></div>
+                <div class="forest-cube" id="cube-10"></div>
+                <div class="forest-cube" id="cube-11"></div>
+                <div class="forest-cube" id="cube-12"></div>
+                <div class="forest-cube" id="cube-13"></div>
+                <div class="forest-cube" id="cube-14"></div>
+                <div class="forest-cube" id="cube-15"></div>
+                <div class="forest-cube" id="cube-16"></div>
             </div>
 
         </div>
