--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
     <script src="https://kit.fontawesome.com/62bdd3af51.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <title>Focus Forest</title>
 </head>
 <body>
+    <header class="app-header">
+        <h1>Focus Forest</h1>
+    </header>
     <div id="root">
         <div id="timer-controls">
             <div id="timer">
@@ -22,10 +25,7 @@
         </div>
         <div id="forest">
             <div class="forest-grid">
-                <div class="forest-cube" id="cube-1">
-                    <!-- <i class="fa-solid fa-tree"></i> -->
-                    <!-- <i class="fa-solid fa-tree-deciduous"></i> -->
-                </div>
+                <div class="forest-cube" id="cube-1"></div>
                 <div class="forest-cube" id="cube-2"></div>
                 <div class="forest-cube" id="cube-3"></div>
                 <div class="forest-cube" id="cube-4"></div>
